--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ aws-cdk.aws-route53==1.130.0
 aws-cdk.aws-route53-targets==1.130.0
 aws-cdk.aws-s3==1.130.0
 aws-cdk.aws-s3-assets==1.130.0
+aws-cdk.aws-s3-notifications==1.130.0
 aws-cdk.aws-sam==1.130.0
 aws-cdk.aws-secretsmanager==1.130.0
 aws-cdk.aws-servicediscovery==1.130.0
