--- a/requirements.txt
+++ b/requirements.txt
@@ -49,7 +49,7 @@ aws-cdk.aws-sqs==1.130.0
 aws-cdk.aws-ssm==1.130.0
 aws-cdk.aws-stepfunctions==1.130.0
 aws-cdk.cloud-assembly-schema==1.130.0
-aws-cdk.core~=1.129.0
+aws-cdk.core
 aws-cdk.custom-resources==1.130.0
 aws-cdk.cx-api==1.130.0
 aws-cdk.pipelines==1.130.0
