--- a/requirements.txt
+++ b/requirements.txt
@@ -1,70 +1,70 @@
-attrs==21.2.0
-autopep8==1.6.0
-aws-cdk.assets==1.130.0
-aws-cdk.aws-apigateway==1.130.0
-aws-cdk.aws-applicationautoscaling==1.130.0
-aws-cdk.aws-autoscaling==1.130.0
-aws-cdk.aws-autoscaling-common==1.130.0
-aws-cdk.aws-autoscaling-hooktargets==1.130.0
-aws-cdk.aws-certificatemanager==1.130.0
-aws-cdk.aws-cloudformation==1.130.0
-aws-cdk.aws-cloudfront==1.130.0
-aws-cdk.aws-cloudwatch==1.130.0
-aws-cdk.aws-codebuild==1.130.0
-aws-cdk.aws-codecommit==1.130.0
-aws-cdk.aws-codedeploy==1.130.0
-aws-cdk.aws-codeguruprofiler==1.130.0
-aws-cdk.aws-codepipeline==1.130.0
-aws-cdk.aws-codepipeline-actions==1.130.0
-aws-cdk.aws-codestarnotifications==1.130.0
-aws-cdk.aws-cognito==1.130.0
-aws-cdk.aws-ec2==1.130.0
-aws-cdk.aws-ecr==1.130.0
-aws-cdk.aws-ecr-assets==1.130.0
-aws-cdk.aws-ecs==1.130.0
-aws-cdk.aws-efs==1.130.0
-aws-cdk.aws-elasticloadbalancing==1.130.0
-aws-cdk.aws-elasticloadbalancingv2==1.130.0
-aws-cdk.aws-events==1.130.0
-aws-cdk.aws-events-targets==1.130.0
-aws-cdk.aws-globalaccelerator==1.130.0
-aws-cdk.aws-iam==1.130.0
-aws-cdk.aws-kinesis==1.130.0
-aws-cdk.aws-kinesisfirehose==1.130.0
-aws-cdk.aws-kms==1.130.0
-aws-cdk.aws-lambda==1.130.0
-aws-cdk.aws-logs==1.130.0
-aws-cdk.aws-route53==1.130.0
-aws-cdk.aws-route53-targets==1.130.0
-aws-cdk.aws-s3==1.130.0
-aws-cdk.aws-s3-assets==1.130.0
-aws-cdk.aws-s3-notifications==1.130.0
-aws-cdk.aws-sam==1.130.0
-aws-cdk.aws-secretsmanager==1.130.0
-aws-cdk.aws-servicediscovery==1.130.0
-aws-cdk.aws-signer==1.130.0
-aws-cdk.aws-sns==1.130.0
-aws-cdk.aws-sns-subscriptions==1.130.0
-aws-cdk.aws-sqs==1.130.0
-aws-cdk.aws-ssm==1.130.0
-aws-cdk.aws-stepfunctions==1.130.0
-aws-cdk.cloud-assembly-schema==1.130.0
+attrs
+autopep8
+aws-cdk.assets
+aws-cdk.aws-apigateway
+aws-cdk.aws-applicationautoscaling
+aws-cdk.aws-autoscaling
+aws-cdk.aws-autoscaling-common
+aws-cdk.aws-autoscaling-hooktargets
+aws-cdk.aws-certificatemanager
+aws-cdk.aws-cloudformation
+aws-cdk.aws-cloudfront
+aws-cdk.aws-cloudwatch
+aws-cdk.aws-codebuild
+aws-cdk.aws-codecommit
+aws-cdk.aws-codedeploy
+aws-cdk.aws-codeguruprofiler
+aws-cdk.aws-codepipeline
+aws-cdk.aws-codepipeline-actions
+aws-cdk.aws-codestarnotifications
+aws-cdk.aws-cognito
+aws-cdk.aws-ec2
+aws-cdk.aws-ecr
+aws-cdk.aws-ecr-assets
+aws-cdk.aws-ecs
+aws-cdk.aws-efs
+aws-cdk.aws-elasticloadbalancing
+aws-cdk.aws-elasticloadbalancingv2
+aws-cdk.aws-events
+aws-cdk.aws-events-targets
+aws-cdk.aws-globalaccelerator
+aws-cdk.aws-iam
+aws-cdk.aws-kinesis
+aws-cdk.aws-kinesisfirehose
+aws-cdk.aws-kms
+aws-cdk.aws-lambda
+aws-cdk.aws-logs
+aws-cdk.aws-route53
+aws-cdk.aws-route53-targets
+aws-cdk.aws-s3
+aws-cdk.aws-s3-assets
+aws-cdk.aws-s3-notifications
+aws-cdk.aws-sam
+aws-cdk.aws-secretsmanager
+aws-cdk.aws-servicediscovery
+aws-cdk.aws-signer
+aws-cdk.aws-sns
+aws-cdk.aws-sns-subscriptions
+aws-cdk.aws-sqs
+aws-cdk.aws-ssm
+aws-cdk.aws-stepfunctions
+aws-cdk.cloud-assembly-schema
 aws-cdk.core
-aws-cdk.custom-resources==1.130.0
-aws-cdk.cx-api==1.130.0
-aws-cdk.pipelines==1.130.0
-aws-cdk.region-info==1.130.0
-boto3==1.19.8
-botocore==1.22.8
-cattrs==1.8.0
-constructs==3.3.161
-jmespath==0.10.0
-jsii==1.41.0
-publication==0.0.3
-pycodestyle==2.8.0
-python-dateutil==2.8.2
-s3transfer==0.5.0
-six==1.16.0
-toml==0.10.2
-typing-extensions==3.10.0.2
-urllib3==1.26.7
+aws-cdk.custom-resources
+aws-cdk.cx-api
+aws-cdk.pipelines
+aws-cdk.region-info
+boto3
+botocore
+cattrs
+constructs
+jmespath
+jsii
+publication
+pycodestyle
+python-dateutil
+s3transfer
+six
+toml
+typing-extensions
+urllib3
